# signal_controller

./: .env.prod  .env.prod.db  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  pyproject.toml
api/: models.py  urls.py
api/migrations/: 0002_rename_trader_id_mastertrader_external_trader_id.py  0003_alter_mastertrader_unique_together.py
app/: asgi.py  settings.py
nginx/: nginx.conf
src/: db.sqlite3
src/api/: admin.py  models.py  serializers.py  urls.py  views.py
src/api/migrations/: 0001_initial.py  0002_crawlrunner_last_seen_at.py  0003_alter_crawlertype_source_alter_mastertrader_source.py  0004_alter_signal_market_price_alter_signal_stop_loss_and_more.py  0004_crawlertype_mastertrader_is_active_mastertrader_name_and_more.py  0005_alter_signal_time.py  0005_remove_mastertrader_signals_alter_crawlertype_source_and_more.py  0006_remove_signal_limit.py  0007_alter_signal_unique_together_remove_crawlertype_id_and_more.py  0008_alter_crawlassignment_crawl_runner_and_more.py  0009_crawlassignment_created_at_and_more.py
src/app/: settings.py  urls.py  wsgi.py
