[tool.poetry]
name = "signal-controller"
version = "0.1.0"
description = ""
authors = ["duyet-lfg <duyet.mai@lfglobaltech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
django-admin-list-filter-dropdown = "^1.0.3"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
